<resources>
    <string name="app_name">TINA3</string>
    <string name="account_type">tina3</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="welcome">Welcome</string>
    <string name="info_tina_splash">TINA</string>
    <string name="info_welcome_to_tina">Welcome to TINA3</string>
    <string name="info_welcome_to_tina_info">The platform that lets you control your AUN appliances wirelessly.</string>
    <string name="welcome_learn_more"><a href="">Learn more</a> about TINA3</string>
    <string name="next">Next</string>
    <string name="hint_aun_id">AUN ID</string>
    <string name="hint_password">Password</string>
    <string name="error_empty_aun_id">AUN ID?</string>
    <string name="error_invalid_aun_id">That\'s not a valid AUN ID.</string>
    <string name="error_empty_password">Password?</string>
    <string name="error_invalid_password">Your password should be at least 6 characters and should contain at least one digit.</string>
    <string name="logging_in">logging in</string>
    <string name="please_wait">Please Wait</string>
    <string name="error_internet_unavailable">No internet connection</string>
    <string name="error_login_not_found">You need to signup with your ID first.</string>
    <string name="error_login_conflict">Your password is incorrect.</string>
    <string name="error_service_unavailable">Something went wrong, please try again.</string>
    <string name="signing_up">signing up</string>
    <string name="error_signup_conflict">This AUN ID already has an account.</string>
    <string name="plugs">Plugs</string>
    <string name="appliances">Appliances</string>
    <string name="hint_no_smart_plugs">When you add a Smart Plug, \nit\'ll always be here</string>
    <string name="error_swipe_to_refresh">Something\'s wrong, \nswipe here to refresh</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="query_logout">Are you sure you want to logout?</string>
    <string name="back">Back</string>
    <string name="logging_out">logging out</string>
    <string name="smart_plugs">Smart Plugs</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="control">Control</string>
    <string name="automation">Automation</string>
    <string name="smart_plug">Smart Plug</string>
    <string name="add_a_smart_plug">Add your \nTINA3 Smart Plug</string>
    <string name="add_a_smart_plug_info_1">before you continue, make sure it\'s connected to your power outlet and you also have its unique ID</string>
    <string name="smart_plug_id">Smart-Plug ID</string>
    <string name="add_smart_plug_try_info">Try switching on your Smart-plug by clicking the switch here,</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="automated">Automated</string>
    <string name="error_empty_id">Smart-plug ID?</string>
    <string name="error_invalid_smartplug_id">Your Smart-plug id should be 22 characters long.</string>
    <string name="adding_smart_plug">adding smart-plug</string>
    <string name="smart_plug_id_info">(your Smart-plug ID is a 22 character string which comes with your smart-plug)</string>
    <string name="smart_plug_optional_name">Name (optional)</string>
    <string name="smart_plug_name_info">(adding an optional name lets you remember what this plug is meant for. \ne.g - Kettle )</string>
    <string name="error_smartplug_conflict">This Smart-plug already belongs to someone else.</string>
    <string name="error_smartplug_not_found">Your Smart-plug didn\'t respond. Please make sure it\'s connected, then try again.</string>
    <string name="smart_plug_created_now_name">Your Smart-plug has been added to your account successfully.</string>
    <string name="naming_smart_plug">naming your smart plug</string>
    <string name="error_smartplug_rename_not_found">This Smart-plug isn\'t yours.</string>
    <string name="smart_plug_add_learn_switch_on">Try switching on your Smart-plug by clicking on the switch above.</string>
    <string name="smart_plug_add_learn_switch_off">Click again to switch it off</string>
    <string name="smart_plug_add_learn_switch_settings">Click on the gear icon to change this Smart-plugs settings.</string>
    <string name="smart_plug_add_learn_switch_automation">Your plug can automate switching on/off if you enable automation.</string>
    <string name="smart_plug_add_learn_switch_learned">You\'re good to go.</string>
    <string name="smart_plug_error_switch_off">Your Smart-plug couldn\'t be switched off. Please try again</string>
    <string name="smart_plug_error_switch_on">Your Smart-plug couldn\'t be switched on. Please try again.</string>
    <string name="no_events">No predictions for today.</string>
    <string name="permission">Permission</string>
    <string name="info_permission_add_accounts">To use this application, you need to grant it permission to add contacts and accounts.</string>
    <string name="grant">Grant</string>
    <string name="error_permission_not_granted">You didn\'t grant the required permissions.</string>
    <string name="hint_no_smart_plugs_added">No Smart-plugs added</string>
    <string name="hint_no_smart_plugs_added_info">when you add some, you\'ll always find them here.</string>
    <string name="okay">Okay</string>
    <string name="error_no_accounts">No valid accounts found on your device. Please logout and login again.</string>
    <string name="add_an_event">Add Auto-Control</string>
    <string name="auto_control_smart_plug">Switch on </string>
    <string name="auto_control_smart_plug_fail">Failed to switch on </string>
    <string name="auto_controlled_smart_plug">Used </string>
    <string name="switch_on_at">FROM:</string>
    <string name="switch_off_at">TO:</string>
    <string name="duration_hint">2 hours</string>
    <string name="error_event_past">It\'s already time for this event. Please adjust and try again.</string>
    <string name="error_almost_event_epoch">It\'s almost 12am, please wait a bit</string>
    <string name="addding_event">adding</string>
    <string name="error_conflicting_events">You already have scheduled auto-control events within this time period. Please adjust the time for your event.</string>
    <string name="no_today_predictions">No predictions for today.</string>
    <string name="one_predicted">1 prediction for today.</string>
    <string name="predictions">predictions for today.</string>
    <string name="hint_predicting">predicting...</string>
    <string name="prediction_service">Prediction Service</string>
</resources>
