<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar_normal_double"
        android:background="@color/tina_green"
        android:padding="@dimen/margin_page"
        android:gravity="center_vertical"
        >
        
        <com.litigy.lib.android.gui.view.imageView.CircularImageView
            android:layout_width="@dimen/height_toolbar"
            android:layout_height="@dimen/height_toolbar"
            app:circularBorderColor="@color/white_half"
            app:circularFillColor="@color/white"
            android:src="@mipmap/ic_social_person_ddd_100"
            app:circularBorderWidth="8dp"
            />

        <com.litigy.lib.android.gui.view.textView.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginLeft="@dimen/margin_page"
            android:textColor="@color/white"
            app:fontAppearance="title"
            android:text="xxxxxxxxx"
            android:textAllCaps="true"
            android:id="@+id/aunId"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        android:orientation="horizontal"
        android:clickable="true"
        android:id="@+id/settingsButton"
        >

        <ImageButton
            android:layout_width="@dimen/height_toolbar"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:clickable="false"
            android:src="@mipmap/ic_action_action_settings_ddd"
            />

        <com.litigy.lib.android.gui.view.textView.TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:textColor="@color/aaa"
            android:gravity="center|left"
            app:fontAppearance="body2"
            android:textAllCaps="true"
            android:text="@string/settings"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        android:orientation="horizontal"
        android:id="@+id/aboutButton"
        android:clickable="true"
        >

        <ImageButton
            android:layout_width="@dimen/height_toolbar"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:clickable="false"
            android:src="@mipmap/ic_action_action_info_ddd"
            />

        <com.litigy.lib.android.gui.view.textView.TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:textColor="@color/aaa"
            android:gravity="center|left"
            app:fontAppearance="body2"
            android:textAllCaps="true"
            android:text="@string/about"
            />

    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/eee"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        android:orientation="horizontal"
        android:id="@+id/logoutButton"
        android:clickable="true"
        >

        <com.litigy.lib.android.gui.view.textView.TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:textColor="@color/aaa"
            android:gravity="center"
            app:fontAppearance="body2"
            android:textAllCaps="true"
            android:text="@string/logout"
            />

    </LinearLayout>


</LinearLayout>