<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/flat_clouds"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clipChildren="false"
        >

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_toolbar"
            android:background="@color/tina_green"
            android:elevation="@dimen/elevation_default_app_bar"
            app:contentInsetRight="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetEnd="0dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <ImageButton
                    android:layout_width="@dimen/height_toolbar"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:src="@mipmap/ic_action_navigation_close"
                    android:id="@+id/closeButton"
                    />

                <com.litigy.lib.android.gui.view.textView.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:text="@string/add_an_event"
                    />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView
            android:clipChildren="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_page"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="@dimen/elevation_default_card_restState"
            app:cardCornerRadius="4dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <FrameLayout
                        android:layout_width="@dimen/height_toolbar"
                        android:layout_height="@dimen/height_toolbar"
                        android:padding="8dp"
                        >

                        <android.support.design.widget.FloatingActionButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:fabSize="mini"
                            app:backgroundTint="@color/ccc"
                            android:elevation="0dp"
                            android:clickable="false"
                            app:elevation="0dp"
                            android:src="@mipmap/ic_action_timetable"
                            >

                        </android.support.design.widget.FloatingActionButton>

                    </FrameLayout>

                    <com.litigy.lib.android.gui.view.textView.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:textColor="@color/ccc"
                        android:lines="1"
                        android:text="@string/auto_control_smart_plug"
                        app:fontAppearance="body2"
                        />

                    <com.litigy.lib.android.gui.view.textView.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:layout_marginLeft="4dp"
                        android:textColor="@color/tina_green"
                        app:fontAppearance="body2"
                        android:lines="1"
                        android:paddingRight="@dimen/margin_page"
                        android:id="@+id/smartPlugName"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_toolbar"
                    android:orientation="horizontal"
                    android:gravity="center|left"
                    android:layout_marginLeft="@dimen/height_toolbar"
                    android:layout_marginRight="@dimen/margin_page"
                    >

                    <com.litigy.lib.android.gui.view.textView.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/switch_on_at"
                        app:fontAppearance="body2"
                        android:textColor="@color/ccc"
                        />


                    <com.litigy.lib.android.gui.view.textView.TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:layout_marginLeft="4dp"
                        android:textColor="@color/flat_belize_hole"
                        app:fontAppearance="body2"
                        android:text="12:00 PM"
                        android:lines="1"
                        android:paddingRight="@dimen/margin_page"
                        android:id="@+id/onTime"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_toolbar"
                    android:orientation="horizontal"
                    android:gravity="center|left"
                    android:layout_marginLeft="@dimen/height_toolbar"
                    android:layout_marginRight="@dimen/margin_page"
                    >

                    <com.litigy.lib.android.gui.view.textView.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/switch_off_at"
                        app:fontAppearance="body2"
                        android:textColor="@color/ccc"
                        />

                    <com.litigy.lib.android.gui.view.textView.TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:layout_marginLeft="4dp"
                        android:textColor="@color/flat_belize_hole"
                        app:fontAppearance="body2"
                        android:text="2:00 PM"
                        android:lines="1"
                        android:paddingRight="@dimen/margin_page"
                        android:id="@+id/offTime"
                        />

                </LinearLayout>

                <com.litigy.lib.android.gui.view.textView.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_page"
                    android:layout_gravity="right"
                    android:textColor="@color/ddd"
                    android:id="@+id/durationHint"
                    android:text="@string/duration_hint"
                    app:fontAppearance="caption"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_page"
        android:layout_gravity="bottom|right"
        android:src="@mipmap/ic_action_navigation_check"
        android:id="@+id/saveButton"
        />

</android.support.design.widget.CoordinatorLayout>